<?xml version="1.0" encoding="utf-8"?>
<resources>
<!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Features</item>
        <item>Pictures</item>
        <item>Storyboard</item>
        <item>Reviews</item>
        <item>Feedback</item>
        <item>Social</item>
        <item>Miscellaneous</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/features</item>
        <item>@drawable/pictures</item>
        <item>@drawable/storyboard</item>
        <item>@drawable/reviews</item>
        <item>@drawable/feedbackicon</item>
        <item>@drawable/facebook</item>
        <item>@drawable/misc</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_social_fragment">SocialFragment</string>
    
    <string name="app_name">Titan-Reta-x</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="settings">Settings</string>
    <string name="userprofile">User Profile</string>
    <string name="NFCsettings">NFC Settings</string>
    <string name="RetaX">Welcome To RetaX App</string>
    <string name="password">Password</string>
    <string name="rememberme">Remember Me</string>
    <string name="Cancel">Cancel</string>
    <string name="title_NFCInteraction">NFC Interaction</string>
    <string name="SignIn">Sign In</string>
    <string name="title_activity_admin">Admin</string>
    <string name="title_activity_stock_take">StockTake</string>
    <string name="title_activity_search_product">SearchProduct</string>
    <string name="for_past">For past</string>
    <string name="assets_not_scanned_in_this_period">Assets not scanned in this period</string>
    <string name="na">NA</string>
    <string name="new_customers_in_this_period">New Customers in this period</string>
    <string name="total_taps_in_this_period">total taps in this period</string>
    <string name="total_taps_in_this_period_tot">tot</string>
    <string name="increase_in_taps">tot</string>
    <string name="increase_in_taps_over_previous">% increase in taps over previous period</string>
    <string name="Top_3_least_tapped_items">Top 3 least tapped \n\titems:</string>
    <string name="Top_3_most_frequently_tapped_items">Top 3 most frequently \n\ttapped items:</string>
    <string name="Average_time_spent_by_a_customer">Average time spent by a customer</string>
    <string name="Average_time_spent_by_a_customer_tot">tot</string>
    <string name="increase_in_new_customers_over_period">% increase in new customers over period</string>
    <string name="increase_in_new_customers_over_period_tot">tot</string>
    <string name="Top_3_most_frequent_customers_during_this_period">Top 3 most frequent customers during this period</string>
    <string name="Pie_Chart">Pie Chart</string>
    <string name="Bar_Chart">Bar Chart</string>
    <string name="title_activity_customer_survey_form">CustomerSurveyForm</string>
    <string name="title_activity_customer_analysis">CustomerAnalysis</string>
    <string name="customer_survey_form_customer_details">Customer Details:</string>
    <string name="customer_survey_form_customer_name">Name:</string>
    <string name="customer_survey_form_customer_area">Area:</string>
    <string name="customer_survey_form_customer_address">Address:</string>
    <string name="customer_survey_form_customer_email">Email:</string>
    <string name="customer_survey_form_customer_mobile">Mobile:</string>
    <string name="customer_survey_form_customer_save">Save</string>
    <string name="customer_survey_form_customer_reset">Reset</string>
    <string name="title_activity_customer_data">CustomerData</string>

</resources>