<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".KpiForAssets" >

    <Spinner
        android:id="@+id/ForPastspinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="30dp"
        android:layout_marginTop="24dp" android:textColor="@color/Black"
        android:entries="@array/dashboardforpast" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ForPastspinner"
        android:layout_marginRight="19dp"
        android:layout_toLeftOf="@+id/ForPastspinner"
        android:text="@string/for_past"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ForPastspinner"
        android:layout_marginTop="53dp"
        android:paddingLeft="5dp"
        android:text="@string/assets_not_scanned_in_this_period"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="68dp"
        android:paddingLeft="5dp"
        android:text="@string/total_taps_in_this_period"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/increaseinapstextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="58dp"
        android:paddingLeft="5dp"
        android:text="@string/increase_in_taps_over_previous"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/kpi_for_assets_increaseintapstottextView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/increaseinapstextView"
        android:layout_alignBottom="@+id/increaseinapstextView"
        android:layout_alignLeft="@+id/kpi_for_assets_totaltapstextView"
        android:gravity="right"
        android:paddingLeft="30dp"
        android:text="@string/increase_in_taps"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/kpi_for_assets_totaltapstextView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/kpi_for_assets_AssetsnotscannedtextView"
        android:gravity="right"
        android:paddingLeft="30dp"
        android:text="@string/total_taps_in_this_period_tot"
        android:textSize="23sp" />

    <ListView
        android:id="@+id/kpi_for_assets_top_most_tappedlistView"
        android:layout_width="240dp"
        android:layout_height="150dp"
        android:layout_alignRight="@+id/textView7"
        android:layout_alignTop="@+id/kpi_for_assets_top_least_tappedlistView"
        android:fadeScrollbars="false" >
    </ListView>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/increaseinapstextView"
        android:layout_marginTop="115dp"
        android:paddingLeft="1dp"
        android:text="@string/Top_3_least_tapped_items"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/kpi_for_assets_top_least_tappedlistView"
        android:layout_alignParentRight="true"
        android:text="@string/Top_3_most_frequently_tapped_items"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/kpi_for_assets_AssetsnotscannedtextView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_alignRight="@+id/textView7"
        android:gravity="right"
        android:paddingLeft="30dp"
        android:text="@string/na"
        android:textSize="23sp" />

    <ListView
        android:id="@+id/kpi_for_assets_top_least_tappedlistView"
        android:layout_width="240dp"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="23dp"
        android:fadeScrollbars="false" >
    </ListView>

</RelativeLayout>