<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Chartsandgraphs" >

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <RadioButton
            android:id="@+id/charts_and_graphs_barchart_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/Bar_Chart"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/charts_and_graphs_piechart_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Pie_Chart"
            android:textSize="20sp" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/charts_and_graph_graph1_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="74dp"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/radioGroup1"
        android:layout_alignTop="@+id/charts_and_graph_spinner"
        android:layout_marginRight="55dp"
        android:text="@string/for_past"
        android:textSize="23sp" />

    <Spinner
        android:id="@+id/charts_and_graph_spinner"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/radioGroup1"
        android:dropDownWidth="120dp"
        android:popupBackground="@drawable/gradient"
        android:spinnerMode="dropdown" />

</RelativeLayout>